# PantypeClustering

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/pantypeclustering/: config.py  main.py
src/pantypeclustering/models/: architectures.py  basemodel.py  distributions.py  model.py  priors.py  utils.py
